--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -5,7 +5,7 @@ on:
     branches: master
 
   schedule:
-    - cron: "0 */3 * * *"
+    - cron: '0 */3 * * *'
 
 jobs:
   update-gist:
@@ -17,6 +17,6 @@ jobs:
       - name: Update gist
         run: node ./index.js  --unhandled-rejections=strict
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 7854aac61f991ef4e7ae7b8440e4fdc6
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: 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
+          GIST_ID: 97235bfdaff5239f3d81ef60275bc4f8
+          WAKATIME_API_KEY: waka_6c959217-aceb-413e-8e87-c628797e161b
