--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     "dotenv": "^8.2.0",
     "axios": "^0.19.0",
     "wakatime-client": "^2.6.0"
-  }
+  },
+  "repository": "git@github.com:Trade-Offf/waka-box.git"
 }
