--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches: master
 
+    workflow_dispatch:
+
   schedule:
-    - cron: "0 */3 * * *"
+    - cron: '0 */3 * * *'
 
 jobs:
   update-gist:
