--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-GIST_ID=
-GH_TOKEN=
-WAKATIME_API_KEY=
+GIST_ID=97235bfdaff5239f3d81ef60275bc4f8
+GH_TOKEN=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
+WAKATIME_API_KEY=waka_ccd6de78-058e-4ac8-b73a-b8f47756e365
