--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,9 +3,9 @@ name: Update Gist
 on:
   push:
     branches: master
-
+  workflow_dispatch:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: "0 */3 * * *"
 
 jobs:
   update-gist:
